Add images to personal projects page

--- a/personalProjects.html
+++ b/personalProjects.html
@@ -317,6 +317,9 @@ using the <a href="https://shiny.rstudio.com/"><code>shiny</code></a> R
 package.</p>
 <div id="rlltrails" class="section level3">
 <h3>RllTrails</h3>
+<div class="row" align="center">
+<p><img src="images/RllTrails_screenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>Access the RllTrails app at <a
 href="https://jzemmels.shinyapps.io/RllTrails/">https://jzemmels.shinyapps.io/RllTrails/</a>.
 The source code is available on <a
@@ -354,6 +357,9 @@ appears on AllTrails.</p></li>
 </div>
 <div id="paintcolortools" class="section level3">
 <h3>paintColorTools</h3>
+<div class="row" align="center">
+<p><img src="images/paintColorTools_screenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>Access the paintColorTools app at <a
 href="jzemmels.shinyapps.io/paintcolortools/">jzemmels.shinyapps.io/paintcolortools/</a>.
 The source code is available on <a
@@ -403,6 +409,9 @@ algorithm such as k-means.</p></li>
 </div>
 <div id="musicfrequencyexplorer" class="section level3">
 <h3>musicFrequencyExplorer</h3>
+<div class="row" align="center">
+<p><img src="images/musicFrequencyExplorer_screenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>Access the musicFrequencyExplorer app at <a
 href="https://jzemmels.shinyapps.io/musicFrequencyExplorer/">https://jzemmels.shinyapps.io/musicFrequencyExplorer/</a>.
 The source code is available on <a
@@ -446,6 +455,9 @@ input</p></li>
 </div>
 <div id="nationalparktwitter" class="section level3">
 <h3>nationalParkTwitter</h3>
+<div class="row" align="center">
+<p><img src="images/nationalParkTwitter_screenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>Access the nationalParkTwitter app at <a
 href="https://jzemmels.shinyapps.io/nationalParkTwitter/">https://jzemmels.shinyapps.io/nationalParkTwitter/</a>.
 The source code is available on <a
@@ -496,6 +508,9 @@ system has a similar Twitter presence)</p></li>
 </div>
 <div id="artexplorer" class="section level3">
 <h3>artExplorer</h3>
+<div class="row" align="center">
+<p><img src="images/artExplorer_screenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>The source code is available on <a
 href="https://github.com/jzemmels/artExplorer">GitHub</a>. I haven’t
 hosted this app on shinyapps.io because I am limited to five
@@ -538,6 +553,8 @@ UI and backend</p></li>
 </ul>
 <p>To-do:</p>
 <ul>
+<li><p>Fix a bug where images do not appear on newest GitHub version of
+the app</p></li>
 <li><p>Split the app by the source of the artwork (e.g., Artvee vs. the
 AIC public collection)</p></li>
 <li><p>Add additional filtering options (e.g., movement, artist,
@@ -549,6 +566,9 @@ href="https://museo.app/">https://museo.app/</a>)</p></li>
 </div>
 <div id="translationtelephone" class="section level3">
 <h3>translationTelephone</h3>
+<div class="row" align="center">
+<p><img src="images/guessingGameScreenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>The source code is available on <a
 href="https://github.com/jzemmels/translationTelephone">https://github.com/jzemmels/translationTelephone</a>.
 I haven’t hosted this app anywhere because I’m limited to five
@@ -593,6 +613,9 @@ the user’s computer</p></li>
 </div>
 <div id="airbnbslideshow" class="section level3">
 <h3>airbnbSlideshow</h3>
+<div class="row" align="center">
+<p><img src="images/airbnbSlideshow_screenshot.png" alt="602Project" style="width:60%"></p>
+</div>
 <p>The source code is available on <a
 href="https://github.com/jzemmels/airbnbSlideshow">GitHub</a>. Because
 this app uses the <a
