--- a/research.html
+++ b/research.html
@@ -261,9 +261,6 @@ $(document).ready(function () {
   <a href="research.html">Research</a>
 </li>
 <li>
-  <a href="talks.html">Speaking</a>
-</li>
-<li>
   <a href="personalProjects.html">Personal Projects</a>
 </li>
 <li>
@@ -337,6 +334,18 @@ href="https://jzemmels.shinyapps.io/cartridgeinvestigatR/"><code>cartridgeInvest
 process and compare cartridge case scans</li>
 </ul>
 </div>
+</div>
+<div id="contributed-talks" class="section level2">
+<h2>Contributed Talks</h2>
+<p>2022 International Association of Identification, in-person: <em>A
+Cartridge Case Comparison Pipeline</em></p>
+<p>2022 American Association of Forensic Science, in-person: <em>An
+Accessible Open-Source Implementation of the Congruent Matching Cells
+Algorithms for Cartridge Case Analysis</em> (<a
+href="https://github.com/jzemmels/aafs22_slides/blob/main/slides/An%20Accessible%20Open-Source%20Implementation%20of%20the%20Congruent%20Matching%20Cells%20Algorithms%20for%20Cartridge%20Case%20Analysis%20D38.pptx">slides</a>)</p>
+<p>2020 Firearms and Toolmarks Workshop <em>cmcR: Open-Source
+Implementation of the Congruent Matching Cells Method</em> (<a
+href="https://github.com/jzemmels/cmcR_presentation">slides</a>)</p>
 </div>
 
 
