Change dspg to workExperience tab

--- a/academicExperience.html
+++ b/academicExperience.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
-  <a href="dspg.html">Data Science for the Public Good</a>
+  <a href="workExperience.html">Work Experience</a>
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
