--- a/research.html
+++ b/research.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
-  <a href="dspg.html">Data Science for the Public Good</a>
+  <a href="workExperience.html">Work Experience</a>
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
@@ -307,9 +307,62 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css">
 <link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
-<div id="firearms-and-toolmarks-comparison-algorithms"
-class="section level2">
-<h2>Firearms and Toolmarks Comparison Algorithms</h2>
+<p>My research focuses on pattern recognition and forensic statistics,
+with an emphasis on firearm and toolmark evidence. I am particularly
+interested in developing statistically-sound and accessible algorithms
+to objectively compare forensic evidence.</p>
+<div id="journal-articles" class="section level2">
+<h2>Journal Articles</h2>
+<p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H.
+<em>Automatic Matching of Cartridge Case Impressions</em>, (in
+preparation, to be submitted to The Journal of Data Science, Statistics,
+and Visualizations).</p>
+<p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H.
+<em>Diagnostic Tools for Cartridge Case Comparison Algorithms</em>, (in
+preparation, to be submitted to The Journal of Computational and
+Graphical Statistics).</p>
+<p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. <em>A Study
+in Reproducibility: the Congruent Matching Cells method and cmcR
+package</em> (submitted to The R Journal).</p>
+</div>
+<div id="contributed-talks" class="section level2">
+<h2>Contributed Talks</h2>
+<div id="oral-presentations" class="section level3">
+<h3>Oral Presentations</h3>
+<p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. (2022).
+<em>An Accessible Open-Source Implementation of the Congruent Matching
+Cells Algorithms for Cartridge Case Analysis</em>, oral presentation at
+the American Academy of Forensic Science (AAFS) 74th Annual Meeting,
+Seattle, WA, February 21-25. (<a
+href="https://github.com/jzemmels/aafs22_slides/blob/main/slides/An%20Accessible%20Open-Source%20Implementation%20of%20the%20Congruent%20Matching%20Cells%20Algorithms%20for%20Cartridge%20Case%20Analysis%20D38.pptx">slides</a>)</p>
+</div>
+<div id="poster-presentations" class="section level3">
+<h3>Poster Presentations</h3>
+<p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. (2022).
+<em>A Cartridge Case Comparison Pipeline</em>, poster presentation at
+the International Association for Identification (IAI) 106th Annual
+Meeting, Omaha, NE, August 1-5.</p>
+<p>Tai, X., Eddy, W., <strong>Zemmels, J.</strong> (2019).
+<em>Developing Methods for Cartridge Breechface Images</em>, poster
+presentation at the CSAFE All-Hands meeting, Ames, IA, May 20-22.</p>
+</div>
+<div id="webinar-presentations" class="section level3">
+<h3>Webinar Presentations</h3>
+<p><strong>Zemmels, J.</strong>, Schoen, A., Mack, D., Johnson, Z.,
+Seeger C., Hanson, B. (2021). <em>DHR “Just the Facts” on Economic and
+Workforce Development</em>, webinar presentation for the Data Science
+for the Public Good Symposium, August 6. (<a
+href="https://datascienceforthepublicgood.org/events/dspg2021/postersessions/dhr-just-facts-economic-and-workforce-development">event
+link</a>)</p>
+<p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. (2020).
+<em>cmcR: Open-Source Implementation of the Congruent Matching Cells
+Method</em>, webinar presentation for Firearms and Toolmarks Workshop,
+November 31 - December 1. (<a
+href="https://github.com/jzemmels/cmcR_presentation">slides</a>)</p>
+</div>
+</div>
+<div id="software" class="section level2">
+<h2>software</h2>
 <div id="cran-packages" class="section level3">
 <h3>CRAN Packages</h3>
 <ul>
@@ -334,18 +387,6 @@ href="https://jzemmels.shinyapps.io/cartridgeinvestigatR/"><code>cartridgeInvest
 process and compare cartridge case scans</li>
 </ul>
 </div>
-</div>
-<div id="contributed-talks" class="section level2">
-<h2>Contributed Talks</h2>
-<p>2022 International Association of Identification, in-person: <em>A
-Cartridge Case Comparison Pipeline</em></p>
-<p>2022 American Association of Forensic Science, in-person: <em>An
-Accessible Open-Source Implementation of the Congruent Matching Cells
-Algorithms for Cartridge Case Analysis</em> (<a
-href="https://github.com/jzemmels/aafs22_slides/blob/main/slides/An%20Accessible%20Open-Source%20Implementation%20of%20the%20Congruent%20Matching%20Cells%20Algorithms%20for%20Cartridge%20Case%20Analysis%20D38.pptx">slides</a>)</p>
-<p>2020 Firearms and Toolmarks Workshop <em>cmcR: Open-Source
-Implementation of the Congruent Matching Cells Method</em> (<a
-href="https://github.com/jzemmels/cmcR_presentation">slides</a>)</p>
 </div>
 
 
