--- a/teaching.html
+++ b/teaching.html
@@ -252,7 +252,7 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
-  <a href="dspg.html">Data Science for the Public Good</a>
+  <a href="workExperience.html">Work Experience</a>
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
@@ -422,14 +422,14 @@ Engineering, Mathematics, and Science</a></p>
 href="https://www.kaytutoring.com/">Kay Tutoring</a></p>
 <ul>
 <li><p>Tutored middle and high school students in subjects ranging from
-Pre-Algebra to Multivariate Calculus</p></li>
+Pre-Algebra to Calculus II</p></li>
 <li><p>Developed and administered SAT and ACT test prep
 curriculum</p></li>
 </ul>
 <p>2013-2017: <strong>Peer Tutor</strong> at Winona State University</p>
 <ul>
 <li>Tutored fellow undergraduate students in subjects ranging from
-Algebra to Introductory Analysis</li>
+Algebra to Advanced Calculus</li>
 </ul>
 </div>
 </div>
