--- a/talks.html
+++ b/talks.html
@@ -252,16 +252,13 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
-  <a href="dspg.html">Data Science for the Public Good</a>
+  <a href="workExperience.html">Work Experience</a>
 </li>
 <li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
   <a href="research.html">Research</a>
-</li>
-<li>
-  <a href="talks.html">Speaking</a>
 </li>
 <li>
   <a href="personalProjects.html">Personal Projects</a>
