Change a sentence in academic experience

--- a/academicExperience.html
+++ b/academicExperience.html
@@ -309,7 +309,7 @@ $(document).ready(function () {
 <link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
 <div id="projects" class="section level2">
 <h2>Projects</h2>
-<p>I summarize various projects I have worked as part of my graduate
+<p>I summarize various projects I have worked on during my graduate
 coursework.</p>
 <div
 id="a-random-effects-markov-random-field-model-for-cartridge-case-comparison-algorithms"
