Change a sentence in the index

--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ href="https://www.stat.iastate.edu/">Department of Statistics</a> at
 Iowa State University and Graduate Research Assistant at the <a
 href="https://www.forensicstats.org/">Center for Statistics and
 Applications in Forensic Evidence</a> (CSAFE). My research interests are
-in forensic statistics and pattern recognition, with applications to
-cartridge case evidence.</p>
+in pattern recognition and forensic statistics, with an emphasis on
+firearm and toolmark evidence.</p>
 <p>I earned my M.Sc. in statistics in 2020 from Iowa State University
 and B.Sc. in Honors Mathematics and Mathematics: Secondary Education
 from Winona State University in 2017.</p>
