--- a/software.html
+++ b/software.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="./files/resume_Zemmels_10-29.pdf">
+  <a href="./files/zemmelsCV.pdf">
     <span class="ai ai-cv ai-lg"></span>
      
   </a>
