--- a/research.html
+++ b/research.html
@@ -272,7 +272,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="./files/zemmelsCV.pdf">
+  <a href="./files/zemmels-cv.pdf">
     <span class="ai ai-cv ai-lg"></span>
      
   </a>
@@ -319,9 +319,12 @@ and Visualizations).</p></li>
 <em>Diagnostic Tools for Cartridge Case Comparison Algorithms</em>, (in
 preparation, to be submitted to The Journal of Computational and
 Graphical Statistics).</p></li>
-<li><p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. <em>A
-Study in Reproducibility: the Congruent Matching Cells method and cmcR
-package</em> (accepted by The R Journal).</p></li>
+<li><p><strong>Zemmels, J.</strong>, VanderPlas, S., &amp; Hofmann, H.
+(2023). <em>A Study in Reproducibility: The Congruent Matching Cells
+Algorithm and cmcR Package</em>. In The R Journal (Vol. 14, Issue 4,
+pp. 79–102). The R Foundation. <a
+href="https://doi.org/10.32614/rj-2023-014"
+class="uri">https://doi.org/10.32614/rj-2023-014</a></p></li>
 </ul>
 </div>
 <div id="contributed-talks" class="section level2">
