--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="./files/zemmelsCV.pdf">
+  <a href="./files/zemmels-cv.pdf">
     <span class="ai ai-cv ai-lg"></span>
      
   </a>
