Add new presentations

--- a/research.html
+++ b/research.html
@@ -346,7 +346,14 @@ href="https://github.com/jzemmels/aafs22_slides/blob/main/slides/An%20Accessible
 <li><p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. (2023).
 <em>Visual Diagnostics for Cartridge Case Impression Evidence</em>,
 poster presentation at the American Academy of Forensic Science (AAFS)
-75th Annual Meeting, Orlando, FL, February 13-17.</p></li>
+75th Annual Meeting, Orlando, FL, February 13-17. (<a
+href="https://learn.forensicstats.org/product?catalog=PR2302Zemmels">poster</a>
+accessible with free account sign-up)</p>
+<ul>
+<li>Winner of “Outstanding Student Poster Award” at the AAFS 2023 Young
+Forensic Scientists Forum (<a
+href="https://forensicstats.org/news-posts/csafe-graduate-student-wins-outstanding-poster-award-at-aafs-young-forensic-scientists-forum/">article</a>)</li>
+</ul></li>
 <li><p><strong>Zemmels, J.</strong>, VanderPlas, S., Hofmann, H. (2022).
 <em>A Cartridge Case Comparison Pipeline</em>, poster presentation at
 the International Association for Identification (IAI) 106th Annual
@@ -360,6 +367,16 @@ presentation at the CSAFE All-Hands meeting, Ames, IA, May
 <div id="webinar-presentations" class="section level3">
 <h3>Webinar Presentations</h3>
 <ul>
+<li><p><strong>Zemmels, J.</strong>, Hofmann, H. (2023) <em>Visual
+Diagnostics for Algorithmic Cartridge Case Comparisons</em>, webinar
+presentation for the Center for Statistics and Applications in Forensic
+Evidence. March 29. (<a
+href="https://jzemmels.github.io/csafe-webinar-visualDiagnostics/#/title-slide">slides</a>,
+<a
+href="https://github.com/jzemmels/csafe-webinar-visualDiagnostics">github</a>,
+<a
+href="https://learn.forensicstats.org/product?catalog=WB230329">recording</a>
+accessible with free account sign-up)</p></li>
 <li><p><strong>Zemmels, J.</strong>, Schoen, A., Mack, D., Johnson, Z.,
 Seeger C., Hanson, B. (2021). <em>DHR “Just the Facts” on Economic and
 Workforce Development</em>, webinar presentation for the Data Science
