Update personal information in index.html
Added professional background and current role details.

--- a/index.html
+++ b/index.html
@@ -305,7 +305,11 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css">
 <link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
 <p><img src="images/exteriorHeadshot_cropped.jpg" style="width:25%; border:5px solid; margin-right: 20px" align="left"></p>
-<p>I am a Ph.D. candidate in the <a
+<p>Since September 2023, I have worked as a Data Scientist at the U.S. Geological Survey (USGS) Water Mission Area's Integrated Information Dissemination Division.
+In this role, I lead the Analytics task for WMA's web products, analyze water scarcity data using Natural Language Processing and modeling, and contribute to various USGS-maintained R and Python packages.
+Check out my USGS staff profile over at <a href="https://www.usgs.gov/staff-profiles/joseph-zemmels" target="_blank">https://www.usgs.gov/staff-profiles/joseph-zemmels</a>.
+</p>
+<p>I hold a Ph.D. in Statistics from the <a
 href="https://www.stat.iastate.edu/">Department of Statistics</a> at
 Iowa State University and Graduate Research Assistant at the <a
 href="https://www.forensicstats.org/">Center for Statistics and
