Update workExperience.html with new content
Added a summary of graduate school work experiences and a link to the USGS staff profile.

--- a/workExperience.html
+++ b/workExperience.html
@@ -301,7 +301,9 @@ $(document).ready(function () {
 
 </div>
 
-
+This page summarizes some of my graduate school work experiences.
+Check out my <a href="https://www.usgs.gov/staff-profiles/joseph-zemmels" target="_blank">USGS staff profile</a> for more recent experiences.
+       
 <p><link rel="stylesheet" href="styles.css" type="text/css">
 <link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
 <div class="row" align="center">
