Wrap text in paragraph tags in workExperience.html

--- a/workExperience.html
+++ b/workExperience.html
@@ -301,8 +301,8 @@ $(document).ready(function () {
 
 </div>
 
-This page summarizes some of my graduate school work experiences.
-Check out my <a href="https://www.usgs.gov/staff-profiles/joseph-zemmels" target="_blank">USGS staff profile</a> for more recent experiences.
+<p>This page summarizes some of my graduate school work experiences.
+Check out my <a href="https://www.usgs.gov/staff-profiles/joseph-zemmels" target="_blank">USGS staff profile</a> for more recent experiences.</p>
        
 <p><link rel="stylesheet" href="styles.css" type="text/css">
 <link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
